--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
   </div>
 
       <div id="out"></div>
+      <div id="msgs"></div>
+      <button id="send">send</button>
   <script src="/app.js"></script>
 </body>
 </html>
