--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,18 @@
       <div id="app">
          <div id="wayBar">hello dummy</div>
          <div id="content">hello world</div>
+         <!-- <div id="msgs"> -->
+         <!--    <div class="input-row"> -->
+         <!--       <input id="msgText" placeholder="Type something..." /> -->
+         <!--       <button id="send">send</button> -->
+         <!--    </div> -->
+         <!-- </div> -->
          <div id="bottom">
-            <div id="msgs">
-               <div id="out-field"></div>
-               <div class="input-row">
-                  <input id="msgText" placeholder="Type something..." />
-                  <button id="send">send</button>
-               </div>
-            </div>
             <div id="navBar">
                <div id="navButtons" class="msgs">
                   <div id="homeBtn" class="navBtn">home</div>
                   <div id="msgBtn" class="navBtn">msgs</div>
+                  <div id="profile" class="navBtn">prof</div>
                </div>
             </div>
          </div>
