--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,27 @@
-<!-- <!doctype html> -->
+<!doctype html>
 <html lang="en">
    <head>
       <meta charset="utf-8" />
       <title>Bun SQLite App</title>
       <link rel="stylesheet" href="/style.css" />
+      <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+      <link rel="manifest" href="manifest.json" />
+      <meta
+         name="viewport"
+         content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+      />
+      <meta name="mobile-web-app-capable" content="yes" />
+      <meta
+         name="apple-mobile-web-app-status-bar-style"
+         content="black-translucent"
+      />
    </head>
    <body>
       <div id="app">
          <div id="wayBar">hello dummy</div>
          <div id="content">hello world</div>
-         <!-- <div id="msgs"> -->
-         <!--    <div class="input-row"> -->
-         <!--       <input id="msgText" placeholder="Type something..." /> -->
-         <!--       <button id="send">send</button> -->
-         <!--    </div> -->
-         <!-- </div> -->
          <div id="bottom">
             <div id="navBar">
                <div id="navButtons" class="msgs">
