--- a/public/msngr.html
+++ b/public/msngr.html
@@ -1,10 +1,19 @@
 <div id="msgBox">
-   <div id="msgHist"></div>
+   <div id="msgHist">
+      <div class="msgIn"><div class="in">this is a msg 5</div></div>
+      <div class="msgOut"><div class="out">this is a msg 6</div></div>
+      <div class="msgIn"><div class="in">this is a msg 5</div></div>
+      <div class="msgOut"><div class="out">this is a msg 6</div></div>
+      <div class="msgIn"><div class="in">this is a msg 5</div></div>
+      <div class="msgOut"><div class="out">this is a msg 6</div></div>
+      <div class="msgIn"><div class="in">this is a msg 5</div></div>
+      <div class="msgOut"><div class="out">this is a msg 6</div></div>
+      <div class="msgIn"><div class="in">this is a msg 5</div></div>
+      <div class="msgOut"><div class="out">this is a msg 6</div></div>
+   </div>
    <div class="input-row">
       <input id="msgText" placeholder="Type something..." />
       <button id="send">send</button>
    </div>
    <div id="kbd"></div>
 </div>
-<!-- <div class="msgIn"><div class="in">this is a msg 5</div></div> -->
-<!-- <div class="msgOut"><div class="out">this is a msg 6</div></div> -->
