--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,23 @@
       <meta charset="utf-8" />
       <title>Bun SQLite App</title>
       <link rel="stylesheet" href="/style.css" />
-      <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+      <link
+         rel="apple-touch-icon"
+         sizes="180x180"
+         href="favicon_io/apple-touch-icon.png"
+      />
+      <link
+         rel="icon"
+         type="image/png"
+         sizes="32x32"
+         href="favicon_io/favicon-32x32.png"
+      />
+      <link
+         rel="icon"
+         type="image/png"
+         sizes="16x16"
+         href="favicon_io/favicon-16x16.png"
+      />
       <link rel="manifest" href="manifest.json" />
       <meta
          name="viewport"
@@ -20,17 +34,18 @@
    </head>
    <body>
       <div id="app">
-         <div id="wayBar">hello dummy</div>
-         <div id="content">hello world</div>
-         <div id="bottom">
-            <div id="navBar">
-               <div id="navButtons" class="msgs">
-                  <div id="homeBtn" class="navBtn">home</div>
-                  <div id="msgBtn" class="navBtn">msgs</div>
-                  <div id="profile" class="navBtn">prof</div>
-               </div>
-            </div>
-         </div>
+         <!-- <div id="wayBar">hello dummy</div> -->
+         <!-- <div id="content">hello world</div> -->
+         <!-- <div id="bottom"> -->
+         <!--    <div id="navBar"> -->
+         <!--       <div id="navButtons" class="msgs"> -->
+         <!--          <div id="homeBtn" class="navBtn">home</div> -->
+         <!--          <div id="msgBtn" class="navBtn">msgs</div> -->
+         <!--          <div id="profile" class="navBtn">prof</div> -->
+         <!--          <div id="auth" class="navBtn">auth</div> -->
+         <!--       </div> -->
+         <!--    </div> -->
+         <!-- </div> -->
       </div>
       <script src="/app.js"></script>
    </body>
