--- a/public/pages/app.html
+++ b/public/pages/app.html
@@ -1,12 +1,12 @@
-<div id="app_$C">
+<div id="app_$C" class="app">
    <div id="wayBar">hello dummy</div>
-   <div id="content">hello world</div>
+   <div id="content">hello world and all of you dummys in it</div>
    <div id="bottom">
       <div id="navBar">
          <div id="navButtons" class="msgs">
             <div id="homeBtn" class="navBtn">home</div>
             <div id="msgBtn" class="navBtn">msgs</div>
-            <div id="profile" class="navBtn">prof</div>
+            <div id="profile" class="navBtn">profile</div>
             <div id="auth" class="navBtn">auth</div>
          </div>
       </div>
