--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
          sizes="16x16"
          href="favicon_io/favicon-16x16.png"
       />
-      <link rel="manifest" href="manifest.json" />
+      <link rel="manifest" href="manifest.json?v=2" />
       <meta
          name="viewport"
-         content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
       />
       <meta name="mobile-web-app-capable" content="yes" />
       <meta
@@ -33,20 +33,7 @@
       />
    </head>
    <body>
-      <div id="app">
-         <!-- <div id="wayBar">hello dummy</div> -->
-         <!-- <div id="content">hello world</div> -->
-         <!-- <div id="bottom"> -->
-         <!--    <div id="navBar"> -->
-         <!--       <div id="navButtons" class="msgs"> -->
-         <!--          <div id="homeBtn" class="navBtn">home</div> -->
-         <!--          <div id="msgBtn" class="navBtn">msgs</div> -->
-         <!--          <div id="profile" class="navBtn">prof</div> -->
-         <!--          <div id="auth" class="navBtn">auth</div> -->
-         <!--       </div> -->
-         <!--    </div> -->
-         <!-- </div> -->
-      </div>
+      <div id="app" class="app"></div>
       <script src="/app.js"></script>
    </body>
 </html>
